Add monitoring check